k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app

spec:
  type: LoadBalancer

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
